kubernetes/system/bitwarden/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bitwarden
  labels:
    pod-security.kubernetes.io/enforce: baseline
    homelab.kfir.dev/private-gateway-access: "true"
