kubernetes/system/bitwarden/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitwarden-postgres
  namespace: bitwarden
spec:
  type: ClusterIP
  selector:
    app: bitwarden
    component: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
      protocol: TCP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bitwarden-postgres
  namespace: bitwarden
  labels:
    app: bitwarden
    component: postgres
spec:
  serviceName: bitwarden-postgres
  replicas: 1
  selector:
    matchLabels:
      app: bitwarden
      component: postgres
  template:
    metadata:
      labels:
        app: bitwarden
        component: postgres
    spec:
      priorityClassName: homelab-bitwarden
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: postgres
          image: docker.io/library/postgres:17.6-bookworm@sha256:f3bd19c606e442c3d7bdfa8002e03fe260a1023351e0ea4598032022b68dd6e3
          imagePullPolicy: IfNotPresent
          ports:
            - name: postgres
              containerPort: 5432
              protocol: TCP
          startupProbe:
            exec:
              command:
                - pg_isready
                - -U
                - bitwarden
                - -d
                - bitwarden_vault
            periodSeconds: 5
            failureThreshold: 60
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - bitwarden
                - -d
                - bitwarden_vault
            periodSeconds: 10
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - bitwarden
                - -d
                - bitwarden_vault
            initialDelaySeconds: 30
            periodSeconds: 30
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
              add:
                - CHOWN
                - DAC_OVERRIDE
                - FOWNER
                - SETGID
                - SETUID
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: bitwarden-postgres
